<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2grabber</name>
  <version>0.1.0</version>
  <description>The kinect2_grabber</description>

  <maintainer email="michelemambrini@gmail.com">Michele Mambrini</maintainer>
  <maintainer email="giacomo.dabisias@gmail.com">Giacomo Dabisias</maintainer>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_1.10</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
